# svcctl

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml  services.example.yaml
svcctl/: cli.py  config.py  daemon.py  ipc.py  service.py  tui.py  utils.py
